# codex_loop

./: .gitignore  AGENT_MEMORY_TELEGRAM_FLOW.md  AGENT_MEMORY_TELEGRAM_FLOW.zh-CN.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Markdown_Check_Scheme.md  Markdown_Fix_Report.md  PIPELINE.md  QUICKSTART.md  README.md  README_Markdown_Check.md  Report.md  SOURCE_READONLY_AUDIT.md  WHATS_NEW.md  package-lock.json  pyproject.toml  test_markdown_output.py  test_message_card.py  test_output_extractor_demo.py
Feishu_readme/: Feishu_msgcard.md  Feishu_readme.md  Feishu_readme_CN.md
Teams_readme/: Teams_readme.md
codex_autoloop/: __init__.py  attachment_policy.py  banner.py  btw_agent.py  btw_skills.py  cli.py  codex_runner.py  codexloop.py  command_protocol.py  control_state.py  copilot_proxy.py  daemon_bus.py  daemon_ctl.py  dashboard.py  discord_adapter.py  failure_modes.py  feishu_adapter.py  final_report.py  live_updates.py  local_control.py  md_checker.py  model_catalog.py  models.py  objective_rewrite.py  objective_rewrite_schema.json  orchestrator.py  output_extractor.py  planner.py  planner_modes.py  planner_schema.json  pptx_report.py  reviewer.py  reviewer_schema.json  runner_backend.py  setup_wizard.py  stall_subagent.py  teams_adapter.py  telegram_control.py  telegram_daemon.py  telegram_notifier.py  (+1 more)
research/: README.md  china-contract-compliance-copilot-execution-tracker-2026-03-20.md  china-contract-compliance-copilot-management-brief-2026-03-20.md  china-contract-compliance-copilot-management-memo-2026-03-20.md  china-contract-compliance-copilot-ops-checklist-2026-03-20.md  china-contract-compliance-copilot-validation-plan-2026-03-20.md  china-legal-ai-go-no-go-memo-2026-03-20.md  court-facing-ai-rules-sanction-risk-tracker-2026-03-20.md  hong-kong-legal-ai-go-no-go-memo-2026-03-20.md  hong-kong-legal-ai-management-brief-2026-03-20.md  legal-ai-opportunity-risk-matrix-2026-03-20.md  legal-ai-regulatory-monitoring-tracker-2026-03-20.md  legal-ai-research-package-baseline-receipt-2026-03-20.md  legal-ai-research-package-register-2026-03-20.md  legal-llm-law-intersections-2026-03-20.md  singapore-legal-ai-go-no-go-memo-2026-03-20.md  uk-australia-uae-legal-ai-market-comparison-2026-03-20.md
scripts/: argusbot_shim.sh  codex_autoloop_shim.sh  kill_argusbot_daemon.sh  kill_telegram_daemon.sh  start_argusbot_daemon.sh  start_telegram_daemon.sh  watch_argusbot_logs.sh  watch_daemon_logs.sh
tests/: test_attachment_policy.py  test_banner.py  test_btw_agent.py  test_btw_skills.py  test_cli.py  test_codex_runner.py  test_codexloop.py  test_command_protocol.py  test_control_state.py  test_copilot_proxy.py  test_daemon_bus.py  test_daemon_ctl.py  test_dashboard.py  test_event_sinks.py  test_feishu_adapter.py  test_feishu_markdown_validator.py  test_final_report.py  test_live_updates.py  (+15 more)
(+31 files in other folders)
