[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-autoloop"
version = "0.1.0"
description = "Supervisor loop for Codex CLI with reviewer sub-agent gating."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
codexloop = "codex_autoloop.codexloop:main"
codex-autoloop = "codex_autoloop.cli:main"
codex-autoloop-telegram-daemon = "codex_autoloop.telegram_daemon:main"
codex-autoloop-daemon-ctl = "codex_autoloop.daemon_ctl:main"
codex-autoloop-setup = "codex_autoloop.setup_wizard:main"
codex-autoloop-models = "codex_autoloop.model_catalog:main"

[tool.setuptools]
packages = ["codex_autoloop"]

[tool.setuptools.package-data]
codex_autoloop = ["reviewer_schema.json"]
