[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ArgusBot"
version = "0.1.0"
description = "ArgusBot supervisor loop for Codex CLI with reviewer and planner gating."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
argusbot = "codex_autoloop.codexloop:main"
argusbot-run = "codex_autoloop.cli:main"
argusbot-daemon = "codex_autoloop.telegram_daemon:main"
argusbot-daemon-ctl = "codex_autoloop.daemon_ctl:main"
argusbot-setup = "codex_autoloop.setup_wizard:main"
argusbot-models = "codex_autoloop.model_catalog:main"

[tool.setuptools]
packages = ["codex_autoloop", "codex_autoloop.core", "codex_autoloop.adapters", "codex_autoloop.apps"]

[tool.setuptools.package-data]
codex_autoloop = ["planner_schema.json", "reviewer_schema.json"]
